Bug 95972 - REGRESSION(r127712): It broke http/tests/xmlhttprequest/basic-auth.html on JSC platforms
Summary: REGRESSION(r127712): It broke http/tests/xmlhttprequest/basic-auth.html on JS...
Status: RESOLVED FIXED
Alias: None
Product: WebKit
Classification: Unclassified
Component: New Bugs (show other bugs)
Version: 528+ (Nightly build)
Hardware: All All
: P2 Critical
Assignee: Nobody
URL:
Keywords: LayoutTestFailure, Regression
Depends on:
Blocks: 79668 95903
  Show dependency treegraph
 
Reported: 2012-09-06 04:15 PDT by Csaba Osztrogonác
Modified: 2012-09-06 10:39 PDT (History)
5 users (show)

See Also:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Csaba Osztrogonác 2012-09-06 04:15:09 PDT
--- /home/webkitbuildbot/slaves/release32bit-NRWT/buildslave/qt-linux-32-release-NRWT/build/layout-test-results/http/tests/xmlhttprequest/basic-auth-expected.txt 
+++ /home/webkitbuildbot/slaves/release32bit-NRWT/buildslave/qt-linux-32-release-NRWT/build/layout-test-results/http/tests/xmlhttprequest/basic-auth-actual.txt 
@@ -1,16 +1,15 @@
+FAIL: Timed out waiting for notifyDone to be called
 Tests for XMLHttpRequest authentication.
 
 sync: User: sync, password: 123.
 sync2: User: sync2, password: 123.
 sync3: User: sync3, password: 123.
 sync4: User: sync4, password: 123.
-sync5: User: sync5, password: 123.
-sync6: User: sync6, password: 123.
-sync7: User: sync7, password: 123.
+sync5:
+sync6:
+sync7:
 async: User: async, password: 123.
 async2: User: async2, password: 123.
 async3: User: async3, password: 123.
 async4: User: async4, password: 123.
-async5: User: async5, password: 123.
-async6: User: async6, password: 123.
-async7: User: async7, password: 123.
+async5 failed with unexpected status: 401
Comment 1 Csaba Osztrogonác 2012-09-06 04:22:47 PDT
I skipped it on Qt to paint the bot green - https://trac.webkit.org/changeset/127728

Please unskip it with the proper fix.
Comment 2 mitz 2012-09-06 10:00:27 PDT
The JavaScriptCore bindings convert explicit undefined values for the user and password parameters into the string "undefined".
Comment 3 mitz 2012-09-06 10:11:23 PDT
Fixed in <http://trac.webkit.org/r127751> by reverting r127712.
Comment 4 Adam Barth 2012-09-06 10:39:42 PDT
Interesting.  Sounds like we need to use TreatNullAs and TreatUndefinedAs.