REGRESSION(r127712): It broke http/tests/xmlhttprequest/basic-auth.html on JSC platforms https://bugs.webkit.org/show_bug.cgi?id=95972

Source/WebCore:

Reverted r127712, because it was based on the false premise that “[Optional] works the way
XMLHttpRequest expects”.

* bindings/js/JSXMLHttpRequestCustom.cpp:
(WebCore::JSXMLHttpRequest::open):
* bindings/v8/custom/V8XMLHttpRequestCustom.cpp:
(WebCore::V8XMLHttpRequest::openCallback):
(WebCore):
* xml/XMLHttpRequest.cpp:
(WebCore::XMLHttpRequest::open):
(WebCore):
* xml/XMLHttpRequest.h:
(XMLHttpRequest):
* xml/XMLHttpRequest.idl:

LayoutTests:

Removed the failing test from the skipped list.

* platform/qt/Skipped:



Canonical link: https://commits.webkit.org/113853@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@127751 268f45cc-cd09-0410-ab3c-d52691b4dbfc