Source/WebCore/xml/XMLHttpRequest.cpp
@@ -445,34 +445,12 @@ bool XMLHttpRequest::isAllowedHTTPHeader(const String& name)
         && !name.startsWith(staticData->m_secHeaderPrefix, false);
 }
 
-void XMLHttpRequest::open(const String& method, const String& url, ExceptionCode& ec)
+void XMLHttpRequest::open(const String& method, const KURL& url, ExceptionCode& ec)
 {
-    internalOpen(method, scriptExecutionContext()->completeURL(url), true, ec);
+    open(method, url, true, ec);
 }
 
-void XMLHttpRequest::open(const String& method, const String& url, bool async, ExceptionCode& ec)
-{
-    internalOpen(method, scriptExecutionContext()->completeURL(url), async, ec);
-}
-
-void XMLHttpRequest::open(const String& method, const String& url, bool async, const String& user, ExceptionCode& ec)
-{
-    KURL urlWithCredentials(scriptExecutionContext()->completeURL(url));
-    urlWithCredentials.setUser(user);
-
-    internalOpen(method, urlWithCredentials, async, ec);
-}
-
-void XMLHttpRequest::open(const String& method, const String& url, bool async, const String& user, const String& password, ExceptionCode& ec)
-{
-    KURL urlWithCredentials(scriptExecutionContext()->completeURL(url));
-    urlWithCredentials.setUser(user);
-    urlWithCredentials.setPass(password);
-
-    internalOpen(method, urlWithCredentials, async, ec);
-}
-
-void XMLHttpRequest::internalOpen(const String& method, const KURL& url, bool async, ExceptionCode& ec)
+void XMLHttpRequest::open(const String& method, const KURL& url, bool async, ExceptionCode& ec)
 {
     internalAbort();
     State previousState = m_state;
@@ -534,6 +512,23 @@ void XMLHttpRequest::internalOpen(const String& method, const KURL& url, bool as
         changeState(OPENED);
     else
         m_state = OPENED;
+}
+
+void XMLHttpRequest::open(const String& method, const KURL& url, bool async, const String& user, ExceptionCode& ec)
+{
+    KURL urlWithCredentials(url);
+    urlWithCredentials.setUser(user);
+
+    open(method, urlWithCredentials, async, ec);
+}
+
+void XMLHttpRequest::open(const String& method, const KURL& url, bool async, const String& user, const String& password, ExceptionCode& ec)
+{
+    KURL urlWithCredentials(url);
+    urlWithCredentials.setUser(user);
+    urlWithCredentials.setPass(password);
+
+    open(method, urlWithCredentials, async, ec);
 }
 
 bool XMLHttpRequest::initSend(ExceptionCode& ec)
